<resources>
    <string name="app_name">Aimission</string>
    >
    <string name="hello_aimlist">Hello aimlist fragment</string>
    <string name="hello_aimdetail">Hello aim detail fragment</string>
    <string name="hello_main">Hello main fragment</string>
    <string name="bottom_bar_home">Home</string>
    <string name="bottom_bar_info">Info</string>
    <string name="bottom_bar_settings">Einstellungen</string>

    <!--fragment goal_detail -->
    <string name="goal_detail_title">Titel</string>
    <string name="goal_detail_description">Beschreibung</string>
    <string name="goal_detail_periodic">Wiederkehrend</string>
    <string name="goal_detail_periodic_description">Ziel startet jeden Monat aufs Neue</string>
    <string name="goal_detail_repetitive">Wiederholend</string>
    <string name="goal_detail_repetitive_amount">Wie oft wiederholen?</string>
    <string name="goal_detail_high_priority">A-Ziel</string>
    <string name="goal_detail_high_priority_description">A-Ziele werden besonders hervorgehoben</string>
    <string name="goal_detail_save">speichern</string>
    <string name="goal_detail_private">Privat</string>
    <string name="goal_detail_work">Beruf und berufliche Weiterbildung</string>
    <string name="goal_detail_education">private Weiterbildung</string>
    <string name="goal_detail_health">Sport und Fittness</string>
    <string name="goal_detail_fun">Spaß und Freizeit</string>
    <string name="goal_detail_finance">Finanzen und Sparen</string>

    <!-- fragment goals -->
    <string name="goals_add_goal">Neues Ziel hinzufügen</string>
    <string name="goals_title">Übersicht</string>

    <!-- fragment settings -->
    <string name="settings_title">"Settings"</string>
    <string name="settings_enable_editing_in_past">Enable editing in the past</string>
    <string name="settings_sorting_mode">Which sorting mode do you want by default?</string>
    <string name="settings_sorting_mode_creation_date">Sort by creation date</string>
    <string name="settings_sorting_mode_items_done">Sort by items done</string>
    <string name="settings_sorting_mode_priority">Sort by priority items</string>

    <!--fragment info (login / logout) -->
    <string name="info_button_register">Registrieren</string>
    <string name="info_button_login">Login</string>
    <string name="info_text_view_please_login">Bitte anmelden</string>
    <string name="info_button_logout">Abmelden</string>

    <!-- general -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_hint_email">Email</string>
    <string name="button_register">Register</string>
    <string name="text_view_hint_password">Password</string>
    <string name="text_view_hint_password_repeat">Repeat Password</string>
    <string name="msg_no_items">Momentan gibt es hier nichts zu sehen.</string>
    <string name="frg_aimdetail_error_msg_item_id_null">An error occured while trying to read out item information for editing. Please try again later.</string>
    <string name="frg_aimdetail_error_msg_unknown_error_edit_mode">An unknown error occured while trying to read out item information for editing. Please try again later.</string>
    <string name="frg_aimdetail_btn_text_delete">Löschen</string>
    <string name="genre_item_private">privat</string>
    <string name="genre_item_progress_private">Weiterbildung privat</string>
    <string name="genre_item_fun">Spaß und Freizeit</string>
    <string name="genre_item_work">Arbeit und berufliche Weiterbildung</string>
    <string name="genre_item_health">Gesundheit und Fittness</string>
    <string name="genre_item_finances">Finanzen und Sparen</string>
    <string name="genre_item_undefined">nicht definiertes Genre</string>
    <string name="status_item_open">Status: offen</string>
    <string name="status_item_progress">Status: teilweise erledigt</string>
    <string name="status_item_done">Status: erledigt</string>
    <string name="status_item_undefined">Status: undefiniert</string>
    <string name="priority_item_text">A-Ziel</string>
    <string name="list_adapter_toast_no_edit_in_past">You cannot edit items in the past since you do not enabled this option in the settings.</string>
    <string name="goal_list_msg_no_items_for_this_month">You have no items defined for this month</string>
    <string name="menu_item_sorting_priority">Sortierung: Priority</string>
    <string name="menu_item_sorting_creation_date">Sortierung: Creation Date</string>
    <string name="menu_item_sorting_done">Sortierung: Items done</string>
    <string name="dialog_helper_positive_button_text">Yes</string>
    <string name="dialog_helper_negative_button_text">No</string>
    <string name="dialog_delete_goal_text">Do you really want to delete this goal?</string>
    <string name="dialog_delete_item_title">Delete item</string>
    <string name="toast_goal_save_error_text">Something went wrong while trying to save your goal. Please try again</string>
    <string name="dialog_goal_not_coming_back_title">Goal no longer repeatable</string>
    <string name="dialog_goal_not_coming_back_text">If you proceed this goal will no longer be marked as coming back in the whole app. Do you wish to continue?</string>
    <string name="landing_page_no_goals_defined">At the moment there are no goals defined by you. Create now your first goal.</string>
    <string name="landing_page_no_user_id_found">Couldn\'t find user id. Are you logged in?</string>
    <string name="register_error_context_is_null">Context is null. Cannot load activity InfoActivity</string>
    <string name="register_error_password_too_short">Please define a password with at least 6 characters.</string>
    <string name="register_error_wrong_password_repeat">Your password repeat is not the same as your password.</string>
    <string name="register_error_wrong_email_address">Please type in a valid email address.</string>
    <string name="register_error_empty_fields">Please fill all the input fields to register.</string>
    <string name="settings_value_edit_past_items">edit_past_items</string>
    <string name="settings_value_default_sort_mode">default_sort_mode</string>
    <string name="goals_adapter_status_done">erledigt</string>
    <string name="goals_adapter_status_open">offen</string>
    <string name="goals_adapter_status_undefined">undefined</string>
    <string name="goals_adapter_repeat_text_repeat">wiederholend</string>
    <string name="goals_adapter_repeat_text_not_repeat">nicht wiederholend</string>
    <string name="card_view_goal_content_description_genre">genre</string>
</resources>
