<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_goal_list_sorting_priority"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/menu_item_sorting_priority"
        android:visible="true" />

    <item
        android:id="@+id/menu_item_goal_list_sorting_creation_date"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/menu_item_sorting_creation_date"
        android:visible="true" />

    <item
        android:id="@+id/menu_item_goal_list_sorting_done"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/menu_item_sorting_done"
        android:visible="true" />
</menu>